--- a/Expense_Tracker_ASPCore.csproj
+++ b/Expense_Tracker_ASPCore.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.EJ2.AspNet.Core" Version="*" /> 
+    <PackageReference Include="Syncfusion.EJ2.AspNet.Core" Version="31.1.17" /> 
   </ItemGroup>
 
 </Project>
